--- a/Front/package.json
+++ b/Front/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.3",
     "@aspnet/signalr": "^1.1.4",
     "@microsoft/signalr": "^5.0.3",
+    "font-awesome": "^4.7.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
